Signed immediate support in .../share/assembler.hpp is broken.

XMLWordPrintable

    • b07
    • generic
    • generic

        Min/Max values are undefined for nbit > 32 (and nbit < 0) in:

        static int min_simm(int nbits) { return -(intptr_t(1) << (nbits - 1)) ; }
        static int max_simm(int nbits) { return (intptr_t(1) << (nbits - 1)) - 1; }
         // Test if x is within signed immediate range for nbits
         static bool is_simm(intptr_t x, int nbits) { return min_simm(nbits) <= x && x <= max_simm(nbits); }

        The max/min_simm* versions are unused (with one exception).

        Unsigned version is not provided.

              Assignee:
              Patric Hedlin (Inactive)
              Reporter:
              Patric Hedlin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: