8248901: Signed immediate support in .../share/assembler.hpp is broken

Reviewed-by: neliasso, kvn, thartmann